# damai-jiaoben

./: .gitignore  ACADEMIC_RESEARCH_GUIDE.md  CHANGELOG.md  CONNECTION_OPTIMIZATION_COMPLETED.md  DELIVERY_SUMMARY.md  DOWNLOAD_GUIDE.md  FEASIBILITY_ANALYSIS.md  FIRST_AID_PROGRESS.md  GITHUB_PAGES_UPDATE.md  GUI_FAST_GRAB_COMPLETION.md  LEGAL_NOTICE.md  PORTABLE_PACKAGE_GUIDE.md  PROGRESS.md  PROJECT_CLEANUP_COMPLETED.md  QUICKSTART.md  README.md  README_VERSION.md  RELEASE_PLAN.md  RESUME_DEV.txt  V2.2_COMPLETION_SUMMARY.md  connection_auto_fixer.py  connection_first_aid.py  damai_smart_ai.py  environment_checker.py  install_unix.sh  last_config.json  pyproject.toml  requirements.txt  smart_wait.py  test_client.py  test_flow_v4.py  test_quick.py  test_server.py  xuexijilu.md
damai_appium/: __init__.py  config.jsonc  config.jsonc.example  config.py  config_templates.py  countdown_timer.py  damai_app_v2.py  device_manager.py  error_handler.py  fast_grabber.py  sound_notifier.py  test_devices.json  ticket_strategy.py  webdriver_health_monitor.py
docs/: README.md  index.html
examples/: click_available_session.py  detect_available_sessions.py  go_to_homepage.py  learn_homepage_search.py  learn_next_step.py  learn_step_by_step.py  restart_damai.py  select_available_session.py  select_available_ticket_class.py  select_session_and_ticket.py  step1_launch_and_check_homepage.py  step2_search_luchuo.py  step_back.py  step_by_step_learn.py  step_click_780_show.py  step_click_book.py  step_click_correct_show.py  step_click_first_search_result.py  step_click_first_show.py  (+6 more)
(+72 files in other folders)
