[tool.poetry]
name = "damai-ticket-automation"
version = "0.2.0"
description = "Automated ticket purchasing system for Damai.com"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "damai_appium" }
]

[tool.poetry.dependencies]
python = "^3.9"
# Core automation
Appium-Python-Client = "^3.1.0"
selenium = "^4.18.0"
# OCR and image processing
paddleocr = "^2.7.0"
paddlepaddle = "^2.6.0"
opencv-python = "^4.9.0"
Pillow = "^10.2.0"
numpy = "^1.24.0"
# Utilities
pyperclip = "^1.8.2"
requests = "^2.31.0"
pypinyin = "^0.51.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
